--- a/contact.html
+++ b/contact.html
@@ -52,18 +52,18 @@
         <div class="people">
             <div>
                 <img src="img/people/1.png" alt="">
-                <p><span>John Doe</span>Senior Marketing Manager<br> Phone:+ 000 123
-                000 77 22<br>Email: contact@example.com</p>
+                <p><span>Abhiram Singh</span>Senior Marketing Manager<br> Phone:+ 9814892161
+                <br>Email: abhiramsingh542@gmail.com</p>
             </div>
             <div>
                 <img src="img/people/2.png" alt="">
-                <p><span>William Smith</span>Senior Marketing Manager<br> Phone:+ 000 123
-                000 77 22<br>Email: contact@example.com</p>
+                <p><span>Pankaj Kumar Singh</span>Senior Marketing Manager<br> Phone:+ 9825485695
+                <br>Email: singhpankaj252@gmail.com.com</p>
             </div>
             <div>
                 <img src="img/people/3.png" alt="">
-                <p><span>Emma Stone</span>Senior Marketing Manager<br> Phone:+ 000 123
-                000 77 22<br>Email: contact@example.com</p>
+                <p><span>Preeti Singh</span>Senior Marketing Manager<br> Phone:+9844205466
+                <br>Email: preetisingh123@gmail.com</p>
             </div>
         </div>
     </section>
